<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".ui.fragments.ProductDetailFragment">

    <TextView
        android:id="@+id/catTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/category"
        android:textAllCaps="true"
        android:textColor="#33FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/rounded_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/rounded_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_item"
        android:layout_width="295dp"
        android:layout_height="228dp"
        android:layout_marginBottom="-80dp"
        android:elevation="20dp"
        android:src="@drawable/demopic"
        app:layout_constraintBottom_toTopOf="@id/rounded_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/product_title_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_item_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_item"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btn_fav"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/circle"
        android:elevation="14dp"
        android:padding="12dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_item_name" />

    <ImageButton
        android:id="@+id/btn_minus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="331dp"
        android:layout_marginBottom="208dp"
        android:background="@drawable/rounded_square"
        android:elevation="14dp"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_minus"
        app:layout_constraintBottom_toBottomOf="@+id/rounded_bg"
        app:layout_constraintEnd_toEndOf="@+id/rounded_bg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_item_name"
        app:layout_constraintTop_toTopOf="@+id/rounded_bg"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/product_quant"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/btn_minus"
        app:layout_constraintTop_toTopOf="@id/btn_minus"
        app:layout_constraintBottom_toBottomOf="@id/btn_minus"/>

    <ImageButton
        android:id="@+id/btn_plus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="253dp"
        android:layout_marginBottom="208dp"
        android:background="@drawable/rounded_square"
        android:elevation="14dp"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@+id/rounded_bg"
        app:layout_constraintEnd_toEndOf="@+id/rounded_bg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tv_item_quantity"
        app:layout_constraintTop_toTopOf="@+id/rounded_bg"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/_11"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/btn_fav"
        app:layout_constraintTop_toTopOf="@id/btn_minus"
        app:layout_constraintBottom_toBottomOf="@id/btn_minus"/>

    <TextView
        android:id="@+id/tv_item_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/dummy_description"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_item_name"
        app:layout_constraintTop_toBottomOf="@id/btn_minus"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="35dp"
        android:padding="14dp"
        android:src="@drawable/ic_back"
        android:scaleType="fitXY"
        android:background="@drawable/circle2"
        app:layout_constraintStart_toStartOf="@id/tv_item_name"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="40dp"
        android:text="@string/share_now"
        android:drawableLeft="@drawable/ic_baseline_share_24"
        android:elevation="14dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"/>

</androidx.constraintlayout.widget.ConstraintLayout>